# gig3

./: .env  GIG3_Brand_Kit.md  GIG3_Marketing_Social_Media_Guide.md  IMPLEMENTATION_GUIDE.md  MAINNET_MIGRATION_PLAN.md  PROJECT_KNOWLEDGE.md  README.md  index.html  package-lock.json  package.json  tailwind.config.ts
solana-program/: Anchor.toml  README.md
solana-program/programs/gig3-escrow/: Cargo.toml
solana-program/programs/gig3-escrow/src/: lib.rs
src/: App.tsx  index.css
src/components/: AuthDialog.tsx  BackButton.tsx  Categories.tsx  CreatorAnalytics.tsx  FeaturedCreators.tsx  FeaturedGigs.tsx  FilesHub.tsx  Footer.tsx  ForClients.tsx  ForCreators.tsx  GuaranteeSection.tsx  Hero.tsx  HowItWorks.tsx  MessageList.tsx  Navbar.tsx  NotificationBell.tsx  OnboardingWizard.tsx  OneClickWalletButton.tsx  OrderConfirmationDialog.tsx  OrderStatusIndicator.tsx  OrderTimeline.tsx  PopularServices.tsx  ProBadge.tsx  ProSubscriptionBanner.tsx  ProfileBadges.tsx  ProfileCompletionChecklist.tsx  PromoBanner.tsx  ProofReview.tsx  ProofUpload.tsx  ProtectedRoute.tsx  ReviewDialog.tsx  ReviewList.tsx  RoleSwitcher.tsx  SellerWelcomeBanner.tsx  StatisticsShowcase.tsx  SubscriptionDialog.tsx  ThemeToggle.tsx  WelcomeModal.tsx  WhyChooseGig3.tsx
src/contexts/: AuthContext.tsx  WalletProvider.tsx
src/hooks/: useCart.tsx  useCreatorRegistration.tsx  useFavorites.tsx  useNotifications.tsx  useProStatus.tsx  useProfileBadges.tsx  useScrollDirection.tsx  useScrollProgress.tsx  useSignOut.tsx  useWalletMonitor.tsx  useWalletRegistrationCache.tsx
supabase/: config.toml
(+105 files in other folders)
